--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@ body {
     font-family: var(--font-body);
     color: var(--color-primary);
     line-height: 1.7; 
+    /* AJOUT DE LA CORRECTION ICI */
+    overflow-x: hidden; 
     background: linear-gradient(to bottom, 
         rgba(0, 255, 192, 0.05),
         rgba(255, 255, 255, 0) 50%
